<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:fillViewport="true"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/account_tab_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/calibri_regular"
                android:text="@string/personal_details"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/account_tab_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/calibri_regular"
                android:text="@string/edit"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_details_account"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:background="#BCBABA"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/account_tab_name_title">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/image_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/imageview_circle"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_oval="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_profile"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/account_tab_details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri_regular"
                        android:text="@string/name_default"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/account_tab_details_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/calibri_regular"
                        android:text="@string/gmail_default" />

                    <TextView
                        android:id="@+id/account_tab_details_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/calibri_regular"
                        android:text="@string/phone_default" />

                    <TextView
                        android:id="@+id/account_tab_details_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/calibri_regular"
                        android:text="@string/day_default" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_details_account">

                <ImageView
                    android:id="@+id/account_tab_bookmarks"
                    android:layout_width="75dp"
                    android:layout_height="54dp"
                    android:src="@drawable/bookmarks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/account_tab_notifications"
                    android:layout_width="75dp"
                    android:layout_height="54dp"
                    android:src="@drawable/notifi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/account_tab_setting"
                    app:layout_constraintStart_toEndOf="@id/account_tab_bookmarks"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/account_tab_setting"
                    android:layout_width="75dp"
                    android:layout_height="54dp"
                    android:src="@drawable/setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/account_tab_payments"
                    app:layout_constraintStart_toEndOf="@id/account_tab_notifications"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/account_tab_payments"
                    android:layout_width="75dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_temp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_features">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/options_rounded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/your_orders"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/your_orders_next"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/icon_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/options_rounded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/feedback_refunds"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/feedback_next"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/icon_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/options_rounded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/help_next"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/icon_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_temp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_temp1"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp">

                <TextView
                    android:id="@+id/send_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_feedback"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_an_emergency"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/rate_on_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us_on_the_play_store"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/log_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <LinearLayout
                android:id="@+id/about"
                android:layout_width="100dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_temp2"
                android:background="@drawable/rectangle_rounded"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_info_24"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>


            <Button
                android:id="@+id/account_tab_update"
                android:layout_width="314dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about"
                android:background="@drawable/button_rounded"
                android:backgroundTint="#BCBABA"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/update"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_semi_bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>